thêm gap để cách mỗi item

--- a/Bootstrap/Phần2.Content/text.html
+++ b/Bootstrap/Phần2.Content/text.html
@@ -16,15 +16,17 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row gx-5 gap-2">
-        <div class="col-md-2">
-          <div class="bg-warning text-center text-danger">Content 1</div>
-        </div>
-        <div class="col-md-2">
-          <div class="bg-warning text-center text-danger">Content 2</div>
-        </div>
-        <div class="col-md-2">
-          <div class="bg-warning text-center text-danger">Content 3</div>
+      <div class="row">
+        <div class="col-md-9">
+          <h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+            explicabo!
+          </h1>
+          <p class="display-3">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
+            ad voluptates alias omnis voluptatibus quae architecto aliquid nobis
+            id repellat!
+          </p>
         </div>
       </div>
     </div>
