text có theo thẻ heading là h1- h6 , và display 1 - 6 , tương tự heading , lớn là h1 - nhỏ h6 , display cũng vậy => có điều chữ mỏng hơn heading

--- a/Bootstrap/Phần2.Content/text.html
+++ b/Bootstrap/Phần2.Content/text.html
@@ -25,7 +25,7 @@
           <p class="display-3">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
             ad voluptates alias omnis voluptatibus quae architecto aliquid nobis
-            id repellat!
+            id repellat!!
           </p>
         </div>
       </div>
