--- a/Bootstrap/Phần4.Content/card_foolter.html
+++ b/Bootstrap/Phần4.Content/card_foolter.html
@@ -13,13 +13,80 @@
       crossorigin="anonymous"
     />
     <title>Title</title>
+    <style>
+      img {
+        max-width: 25rem;
+        max-height: 25rem;
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md">card</div>
+        <div class="col-md">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="https://images.pexels.com/photos/14453331/pexels-photo-14453331.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="https://images.pexels.com/photos/14453331/pexels-photo-14453331.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This card has supporting text below as a natural lead-in to
+                    additional content.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="https://images.pexels.com/photos/14453331/pexels-photo-14453331.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This card has even longer
+                    content than the first to show that equal height action.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    card
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
