để tăng thời gian thì thêm thuộc tính data-bs-interval= 'số thời gian' trong carousel-item

--- a/Bootstrap/Phần4.Content/carousel.html
+++ b/Bootstrap/Phần4.Content/carousel.html
@@ -65,7 +65,7 @@
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="20000">
           <img
             src="https://dummyimage.com/1800x1200/dbdbdb/787878.png&text=Image+cap"
             class="d-block w-100"
