collapse là để hiển thị nội dung khi nhấn button , nhấn 1 lần để mở nhiều nội dung

--- a/Bootstrap/Phần4.Content/collapse.html
+++ b/Bootstrap/Phần4.Content/collapse.html
@@ -26,8 +26,8 @@
               role="button"
               aria-expanded="false"
               aria-controls="multiCollapseExample1"
-              >Toggle first element</a
-            >
+              >Chính sách bảo hành
+            </a>
             <button
               class="btn btn-primary"
               type="button"
@@ -36,7 +36,7 @@
               aria-expanded="false"
               aria-controls="multiCollapseExample2"
             >
-              Toggle second element
+              Điều kiện đổi trả
             </button>
             <button
               class="btn btn-primary"
@@ -46,25 +46,53 @@
               aria-expanded="false"
               aria-controls="multiCollapseExample1 multiCollapseExample2"
             >
-              Toggle both elements
+              Xem chi tiết
             </button>
           </p>
           <div class="row">
             <div class="col">
               <div class="collapse multi-collapse" id="multiCollapseExample1">
                 <div class="card card-body">
-                  Some placeholder content for the first collapse component of
-                  this multi-collapse example. This panel is hidden by default
-                  but revealed when the user activates the relevant trigger.
+                  Chính sách bảo hành được coi là một yếu tố quan trọng khi
+                  người tiêu dùng cân nhắc việc mua điện thoại. Theo chính sách,
+                  khách hàng có thể đổi trả sản phẩm nếu sản phẩm gặp vấn đề kỹ
+                  thuật trong một khoảng thời gian nhất định sau khi mua hàng.
+                  Thời gian bảo hành có thể thay đổi tuỳ thuộc vào loại sản phẩm
+                  và thương hiệu của sản phẩm. Ngoài ra, các ràng buộc khác cũng
+                  có thể được áp dụng, chẳng hạn như điều kiện sử dụng, hỏng hóc
+                  do người dùng chỉ định hoặc sửa chữa không chính hãng. Khách
+                  hàng cần phải tìm hiểu kỹ chính sách bảo hành trước khi mua
+                  điện thoại để tránh những sự bất tiện không mong muốn. Việc
+                  triển khai chính sách bảo hành cũng là một phần của chiến lược
+                  kinh doanh của nhà sản xuất điện thoại. Quá trình này bao gồm
+                  dịch vụ hỗ trợ khách hàng và đảm bảo tính hợp pháp cho chính
+                  sách. Với một chính sách bảo hành tốt và một dịch vụ khách
+                  hàng chuyên nghiệp, nhà sản xuất có thể tạo ra niềm tin và
+                  trung thực từ khách hàng, đồng thời cải thiện danh tiếng của
+                  mình trên thị trường.
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="collapse multi-collapse" id="multiCollapseExample2">
                 <div class="card card-body">
-                  Some placeholder content for the second collapse component of
-                  this multi-collapse example. This panel is hidden by default
-                  but revealed when the user activates the relevant trigger.
+                  Chính sách đổi trả điện thoại của chúng tôi cho phép khách
+                  hàng có thể yêu cầu đổi trả trong các trường hợp sau đây: Sản
+                  phẩm bị hỏng: Nếu sản phẩm mà khách hàng nhận được bị hỏng
+                  hoặc không hoạt động đúng cách, chúng tôi sẽ đổi trả sản phẩm
+                  đó miễn phí hoặc hoàn tiền cho khách hàng. Sai hàng hoá: Nếu
+                  chúng tôi giao sai sản phẩm hoặc số lượng không đúng như đơn
+                  hàng của quý khách yêu cầu, chúng tôi sẽ đổi trả sản phẩm đó
+                  hoặc hoàn tiền. Khách hàng không hài lòng: Nếu sau khi nhận
+                  hàng, khách hàng không hài lòng với sản phẩm đã mua, khách
+                  hàng có thể yêu cầu đổi trả sản phẩm trong vòng 7 ngày kể từ
+                  ngày nhận hàng. Trong trường hợp này, chi phí vận chuyển và xử
+                  lý đổi trả sẽ do khách hàng chịu. Lưu ý rằng để yêu cầu đổi
+                  trả sản phẩm, khách hàng cần giữ nguyên tình trạng sản phẩm
+                  như ban đầu, không sửa chữa hay tháo rời sản phẩm cũng như tất
+                  cả phụ kiện, sách hướng dẫn khi trả sản phẩm. Quý khách cần
+                  liên hệ với phục vụ khách hàng của chúng tôi để được hướng dẫn
+                  chi tiết và giải đáp thắc mắc.
                 </div>
               </div>
             </div>
