--- a/Bootstrap/Phần4.Content/nav&tab.html
+++ b/Bootstrap/Phần4.Content/nav&tab.html
@@ -18,7 +18,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md">
-          <div class="card">
+          <div
+            class="card shadow-lg rounded-2 rounded"
+            style="max-width: 25rem"
+          >
             <div class="card-header">
               <nav class="nav nav-pills justify-content-center">
                 <a class="nav-link active" href="#" data-bs-toggle="tab"
