--- a/Bootstrap/Phần4.Content/scrolly.html
+++ b/Bootstrap/Phần4.Content/scrolly.html
@@ -38,7 +38,7 @@
               data-bs-target="#nav-example"
               data-bs-smooth-scroll="true"
               tabindex="0"
-              style="height: 18.75rem"
+              style="height: 18.75rem; max-width: 18.75rem"
               class="scrollspy-example overflow-scroll"
             >
               <div id="div1">
