khi thiết lập  , để ý như sau: border , border-4 , border-color , => cơ bản , còn 1  viền  ,thêm border-1-5 , border-0 ,

--- a/Bootstrap/Phần6.Uitimated/border.html
+++ b/Bootstrap/Phần6.Uitimated/border.html
@@ -41,6 +41,77 @@
         Content 6
       </div>
     </div>
+    <form action="" method="get" class="was-validated">
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          required
+        />
+        <div id="emailHelp " class="form-text invalid-feedback">
+          We'll never share your email with anyone else.
+        </div>
+        <div class="valid-feedback">ok</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          aria-describedby="passwordHelp"
+          required
+        />
+        <div id="passwordHelp" class="form-text invalid-feedback">
+          We'll never share your password with anyone else.
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputText1" class="form-label">Some text</label>
+          <input
+            type="text"
+            class="form-control"
+            id="exampleInputText1"
+            aria-describedby="textHelp"
+            required
+          />
+          <div id="textHelp" class="form-text">
+            We'll never share your texts with anyone else.
+          </div>
+        </div>
+      </div>
+      <div class="d-grid gap-2 my-4">
+        <button
+          type="button"
+          name=""
+          id=""
+          class="btn btn-primary w-50 mx-auto d-block rounded rounded-pill text-capitalize"
+        >
+          Click me
+        </button>
+      </div>
+    </form>
+    <hr />
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="mb-3">
+            <label for="exampleInputText1" class="form-label">Some text</label>
+            <input
+              type="text"
+              class="form-control border border-bottom-0 border-warning"
+              id="exampleInputText1"
+              aria-describedby="textHelp"
+            />
+            <div id="textHelp" class="form-text">
+              We'll never share your texts with anyone else.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
   </body>
