e.preventDefault();         e.stopPropagation(); , là 2 phương thức chỉ định dùng để xác nhận  lần 2 cho việc chuyển trang , gửi dữ liệu , nhấn link

--- a/JavaScripts/Phần 7.Event/toạ độ.html
+++ b/JavaScripts/Phần 7.Event/toạ độ.html
@@ -21,7 +21,7 @@
             const show = setTimeout(() => {
               alert(`đội dung ${p.innerText}`);
             }, 0);
-            setTimeout(() => {
+            setTimeout(() =>
               p.click();
             }, 4000);
           } else {
